turtleart.housetree.HouseTree.scala.code
def triangle(l:Int)={
  droite(30);avance(l);droite(120);avance(l);droite(120);avance(l);droite(180)
}




def maison(x:Int) {
  avance(x);triangle(x);avance(x);droite(90);avance(x);droite(90);avance(x);droite(90)
}



override def run() {
  for (i <- 1 to 4){
  maison(30);leveCrayon();avance(20);baissecrayon(),droite(90)
  }}